Added popularity section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <div class="banner">
+        <section class="banner__section">
             <div class="container">
                 <div class="banner__container">
                     <h1 class="banner__title">Sell More!</h1>
@@ -34,11 +34,59 @@
                 </div>
             </div>
             <img class="banner__image" src="./images/Background@2x.png" alt="Hardware">
-        </div>
+        </section>
+
+        <section class="popularity__section">
+            <h2 class="container popularity__title">The most popular sales platform in country</h2>
+            <div class="container">
+                <article class="popularity__article">
+                    <div class="popularity__circle popularity__circle_basic">
+                        <img src="./images/Person.svg" alt="Person">
+                    </div>
+                    <p><span>100000+</span></p>
+                    <p>daily entries</p>
+                </article>
+                <article class="popularity__article">
+                    <div class="popularity__circle popularity__circle_professional">
+                        <img src="./images/Eye.svg" alt="Person">
+                    </div>
+                    <p><span>2000000+</span></p>
+                    <p>seen products every day</p>
+                </article>
+                <article class="popularity__article">
+                    <div class="popularity__circle popularity__circle_premium">
+                        <img src="./images/Catalog.svg" alt="Person">
+                    </div>
+                    <p><span>100000+</span></p>
+                    <p>added posts daily</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="blog__section">
+
+        </section>
+
+        <section class="pricing__section">
+
+        </section>
+
+        <section class="contact__section">
+
+        </section>
     </main>
 
     <footer>
-
+        <div class="container">
+            <div class="footer__left">
+                <h3 class="footer__logo">BestShop</h3>
+                <p>© 2019 BestShop LTD, All Rights Reserved</p>
+            </div>
+            <div class="footer__right">
+                <img src="./images/Facebook.svg" alt="Facebook">
+                <img src="./images/Twitter.svg" alt="Twitter">
+            </div>
+        </div>
     </footer>
 </body>
 
