Added advantages section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,39 @@
             </div>
         </section>
 
-        <section class="blog__section">
-
+        <section class="advantages__section">
+            <div class="container">
+                <article class="advantages__top">
+                    <div class="advantages__left">
+                        <h2 class="advantages__title">Be always firs</h2>
+                        <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="advantages__line basic"></div>
+                    </div>
+                    <div class="advantages__right">
+                        <img src="./images/Macbook2.png" alt="">
+                    </div>
+                </article>
+                <article class="advantages__center">
+                    <div class="advantages__left">
+                        <img src="./images/iPhone2.png" alt="">
+                    </div>
+                    <div class="advantages__right">
+                        <h2 class="advantages__title">Be always firs</h2>
+                        <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="advantages__line professional"></div>
+                    </div>
+                </article>
+                <article class="advantages__bottom">
+                    <div class="advantages__left">
+                        <h2 class="advantages__title">Be always firs</h2>
+                        <p class="advantages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <div class="advantages__line premium"></div>
+                    </div>
+                    <div class="advantages__right">
+                        <img src="./images/Trumpet.png" alt="">
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section class="pricing__section">
