Added pricing section

--- a/index.html
+++ b/index.html
@@ -99,11 +99,66 @@
         </section>
 
         <section class="pricing__section">
-
+            <h2 class="container pricing__title">Pricing</h2>
+            <div class="container">
+                <article class="pricing__article_basic">
+                    <div class="top">
+                        <p class="pricing__type">Basic</p>
+                        <p class="pricing__price">$0</p>
+                        <p class="pricing__limited">ED2E</p>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <li><span class="enable">☑</span> 100 MB HDD</li>
+                            <li><span class="enable">☑</span> 1 Subdomain</li>
+                            <li><span class="enable">☑</span> 2 E-mails</li>
+                            <li><span class="disable">&#8855</span>Two years license</li>
+                            <li><span class="disable">&#8855</span>Full support</li>
+                        </ul>
+                    </div>
+                    <a class="button button__begin" href="">Begin</a>
+                </article>
+                <article class="pricing__article_professional">
+                    <div class="top">
+                        <p class="pricing__type">Professional</p>
+                        <p class="pricing__price">$25</p>
+                        <p class="pricing__limited">Limited offer</p>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <li><span class="enable">☑</span> 500 MB HDD</li>
+                            <li><span class="enable">☑</span> 2 Subdomain</li>
+                            <li><span class="enable">☑</span> 5 E-mails</li>
+                            <li><span class="enable">☑</span> One years license</li>
+                            <li><span class="disable">&#8855</span>Full support</li>
+                        </ul>
+                    </div>
+                    <a class="button button__professional" href="">Professional</a>
+                </article>
+                <article class="pricing__article_premium">
+                    <div class="top">
+                        <p class="pricing__type">Premium</p>
+                        <p class="pricing__price">$60</p>
+                        <p class="pricing__limited">Limited offer</p>
+                    </div>
+                    <div class="bottom">
+                        <ul>
+                            <li><span class="enable">☑</span> 2 GB HDD</li>
+                            <li><span class="enable">☑</span> 5 Subdomain</li>
+                            <li><span class="enable">☑</span> 20 E-mails</li>
+                            <li><span class="enable">☑</span> Two years license</li>
+                            <li><span class="enable">☑</span> Full support</li>
+                        </ul>
+                    </div>
+                    <a class="button button__premium" href="">Premium</a>
+                </article>
+            </div>
         </section>
 
         <section class="contact__section">
+            <div class="container">
 
+            </div>
         </section>
     </main>
 
