--- a/index.html
+++ b/index.html
@@ -157,7 +157,30 @@
 
         <section class="contact__section">
             <div class="container">
-
+                <div class="contact__info">
+                    <h1 class="contact__title">Any questions?</h1>
+                    <p class="contact__text">Leave your email address or call us!</p>
+                    <div class="contact__details">
+                        <img src="./images/Mail Icon.svg" alt="">
+                        <p>info@bestshop.xyz</p>
+                        <img src="./images/Phone Icon.svg" alt="">
+                        <p>123 456 789</p>
+                    </div>
+                </div>
+                <div class="contact__form">
+                    <form>
+                        <label for="name">NAME</label>
+                        <input type="text" name="name" id="name">
+                        <label for="email">EMAIL</label>
+                        <input type="email" name="email" id="email">
+                        <div class="contact__accept">
+                            <input type="checkbox" name="accept" id="accept">
+                            <label for="accept">
+                                I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)
+                            </label>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
